force-app/main/default/objects/Complaint__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <inlineHelpText>Use Only when you need approval.</inlineHelpText>
    <label>Approval Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>