force-app/main/default/objects/Complaint__c/fields/Assigned_To_current_user__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_current_user__c</fullName>
    <formula>$User.Id =  Quality_Inspector_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To current user</label>
    <type>Checkbox</type>
</CustomField>