force-app/main/default/objects/Complaint__c/fields/Complaint_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Closed_Date__c</fullName>
    <description>Date when stage Closed without OTP</description>
    <label>Complaint Closed Date</label>
    <type>Date</type>
</CustomField>