force-app/main/default/objects/Complaint__c/fields/Complaint_Due_to__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Due_to__c</fullName>
    <label>Complaint Due to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor/Dealer</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Old distributor</fullName>
            </value>
            <value>
                <fullName>Farmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>