force-app/main/default/objects/Complaint__c/fields/Complaint_Send_To_Quality_Head__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Send_To_Quality_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complaint Send To Quality Head</label>
    <type>Checkbox</type>
</CustomField>