force-app/main/default/objects/Complaint__c/fields/Complaint_Source__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Source__c</fullName>
    <label>Farmer complained to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Toll Free Number</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Quality Team</fullName>
            </value>
            <value>
                <fullName>Sales team</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CRM team</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>