force-app/main/default/objects/Complaint__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Faulty fabric - Manufacturing</fullName>
            </value>
            <value>
                <fullName>Damage Fabric - Transport/Logistics</fullName>
            </value>
            <value>
                <fullName>Supply shortage</fullName>
            </value>
            <value>
                <fullName>Delay in Supply</fullName>
            </value>
            <value>
                <fullName>Leakage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>