force-app/main/default/objects/Complaint__c/fields/Complaint_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type_New__c</fullName>
    <label>Complaint Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Underwater leakage</fullName>
            </value>
            <value>
                <fullName>Operator joint problem</fullName>
            </value>
            <value>
                <fullName>Company joint problem</fullName>
            </value>
            <value>
                <fullName>Bubbles in lamination</fullName>
            </value>
            <value>
                <fullName>Lamination/Coating problem</fullName>
            </value>
            <value>
                <fullName>Fabric fallen into pond</fullName>
            </value>
            <value>
                <fullName>Holes/tears in fabric</fullName>
            </value>
            <value>
                <fullName>Fabric shortage</fullName>
            </value>
            <value>
                <fullName>Stones problem</fullName>
            </value>
            <value>
                <fullName>Fire problem</fullName>
            </value>
            <value>
                <fullName>Animals problem</fullName>
            </value>
            <value>
                <fullName>Colour mismatch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>