force-app/main/default/objects/Complaint__c/fields/CompletedRemarks__c.field-meta.xml
<CustomField>
    <fullName>CompletedRemarks__c</fullName>
    <label>Completed Remarks</label>
    <type>TextArea</type>
</CustomField>