force-app/main/default/objects/Complaint__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Customer__r.State__c</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>