force-app/main/default/objects/Complaint__c/fields/Farmer_Name__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Name__c</fullName>
    <formula>Enquiry__r.Farmer_Name__c</formula>
    <label>Farmer Name</label>
    <type>Text</type>
</CustomField>