force-app/main/default/objects/Complaint__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date when stage inactive</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>