force-app/main/default/objects/Complaint__c/fields/Inactive_Due_To__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Due_To__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor will solve complaint</fullName>
            </value>
            <value>
                <fullName>Waiting for farmer to empty pond</fullName>
            </value>
            <value>
                <fullName>Waiting for farmer to reply</fullName>
            </value>
            <value>
                <fullName>Underwater repair done, permanent repair pending</fullName>
            </value>
            <value>
                <fullName>Waiting for farmer payment</fullName>
            </value>
            <value>
                <fullName>Consumer Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>