force-app/main/default/objects/Complaint__c/fields/MaterialTypeprovided__c.field-meta.xml
<CustomField>
    <fullName>MaterialTypeprovided__c</fullName>
    <label>Replacement Material Type provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jalasanchay</fullName>
            </value>
            <value>
                <fullName>Jalasanchay Super</fullName>
            </value>
            <value>
                <fullName>Samruddhi 400</fullName>
            </value>
            <value>
                <fullName>Samruddhi 300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>