force-app/main/default/objects/Complaint__c/fields/Notes_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Notes_Remarks__c</fullName>
    <label>Notes/Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>