force-app/main/default/objects/Complaint__c/fields/Operator_machine_used__c.field-meta.xml
<CustomField>
    <fullName>Operator_machine_used__c</fullName>
    <label>Operator machine used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Twinny</fullName>
            </value>
            <value>
                <fullName>Handgun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>