force-app/main/default/objects/Complaint__c/fields/OTP_Language__c.field-meta.xml
<CustomField>
    <fullName>OTP_Language__c</fullName>
    <label>OTP Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hindi</fullName>
                <default>true</default>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>