force-app/main/default/objects/Complaint__c/fields/QtySqMtr__c.field-meta.xml
<CustomField>
    <fullName>QtySqMtr__c</fullName>
    <label>Replacement Material Qty Provided (sq m)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>