force-app/main/default/objects/Complaint__c/fields/Quality_Head__c.field-meta.xml
<CustomField>
    <fullName>Quality_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>