force-app/main/default/objects/Complaint__c/fields/Quality_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Quality_Inspector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>