force-app/main/default/objects/Complaint__c/fields/Reason_of_failure__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_failure__c</fullName>
    <label>Reason of failure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sealing too tight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>