force-app/main/default/objects/Complaint__c/fields/Resolution_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Vendor_Name__c</fullName>
    <label>Underwater Leakage Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baliraja Irrigation &amp; Services</fullName>
            </value>
            <value>
                <fullName>Shivtare Services</fullName>
            </value>
            <value>
                <fullName>Eknath Agro Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>