force-app/main/default/objects/Complaint__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Enquiry__r.State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>