force-app/main/default/objects/Complaint__c/recordTypes/Details_Complaint.recordType-meta.xml
<RecordType>
    <fullName>Details_Complaint</fullName>
    <active>true</active>
    <description>Details Page record</description>
    <label>Details Complaint</label>
</RecordType>