force-app/main/default/objects/Complaint__c/recordTypes/New_Complaint.recordType-meta.xml
<RecordType>
    <fullName>New_Complaint</fullName>
    <active>true</active>
    <description>Only open when new complaint create</description>
    <label>New Complaint</label>
</RecordType>