force-app/main/default/objects/Complaint__c/validationRules/Approval_Request_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Request_Validation</fullName>
    <active>true</active>
    <description>Only CEO role can change to approved</description>
    <errorConditionFormula>IF( $UserRole.Name &lt;&gt; &apos;CEO - Avana&apos;  &amp;&amp;  ISCHANGED( Approval_Request__c ) , ISPICKVAL(Approval_Request__c,&apos;Approved&apos;) ,false)</errorConditionFormula>
    <errorMessage>Only CEO can Approve.</errorMessage>
</ValidationRule>