force-app/main/default/objects/Complaint__c/validationRules/Close_complaints_needs_closing_remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_complaints_needs_closing_remarks</fullName>
    <active>true</active>
    <description>Checks that there is some closed remarks filled out when closing a complaint.</description>
    <errorConditionFormula>IF( ISPICKVAL( Stages__c , &apos;Closed without OTP&apos;),  ISBLANK(CompletedRemarks__c),false )</errorConditionFormula>
    <errorDisplayField>CompletedRemarks__c</errorDisplayField>
    <errorMessage>Fill out completed remarks before closing complaint.</errorMessage>
</ValidationRule>