force-app/main/default/objects/Complaint__c/validationRules/Complaint_Close_Frm_CloseComplaint_Btn.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Close_Frm_CloseComplaint_Btn</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Stages__c ),ISPICKVAL( Stages__c ,&apos;Closed with OTP&apos;), IsClosed__c  = false )</errorConditionFormula>
    <errorMessage>Please Use The Complaint Closed Button To Closed with OTP Stage</errorMessage>
</ValidationRule>