force-app/main/default/objects/Complaint__c/validationRules/Complaint_Lock_Once_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Lock_Once_Closed</fullName>
    <active>true</active>
    <description>Can&apos;t Change the Stage Once Complaint Closed.</description>
    <errorConditionFormula>AND(TEXT(PRIORVALUE( Stages__c )) = &apos;Closed with OTP&apos;, ISCHANGED( Stages__c ))</errorConditionFormula>
    <errorMessage>Your record has been Locked. You Can&apos;t Change.</errorMessage>
</ValidationRule>