force-app/main/default/objects/Complaint__c/validationRules/Customer_of_Enquiry_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_of_Enquiry_not_blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Enquiry__r.Customer__c )</errorConditionFormula>
    <errorMessage>Need a Customer in Enquiry</errorMessage>
</ValidationRule>