force-app/main/default/objects/Complaint__c/validationRules/DistributorMandatory_ComplainDueToDealer.validationRule-meta.xml
<ValidationRule>
    <fullName>DistributorMandatory_ComplainDueToDealer</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL(Complaint_Due_to__c,&apos;Distributor/Dealer&apos;),ISBLANK( Distributor__c ),false )</errorConditionFormula>
    <errorMessage>Distributor Needed For Complaint Due To &apos;Distributor/Dealer&apos;.</errorMessage>
</ValidationRule>