force-app/main/default/objects/Complaint__c/validationRules/Inactive_duo_to_reason_for_inactive_stag.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_duo_to_reason_for_inactive_stag</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Stages__c , &apos;Inactive&apos;), ISPICKVAL( Inactive_Due_To__c , &apos;&apos;) ,false )</errorConditionFormula>
    <errorMessage>Please fill Inactive due to reason for Inactive stage</errorMessage>
</ValidationRule>