force-app/main/default/objects/Complaint__c/validationRules/Resolution_Need_For_Under_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Need_For_Under_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Stages__c ,&apos;Under Resolution&apos;),ISPICKVAL( Resolution__c ,&apos;&apos;),false)</errorConditionFormula>
    <errorMessage>Please Enter Resolution For Change The Stages To &apos;Under Resolution&apos;.</errorMessage>
</ValidationRule>