force-app/main/default/objects/Complaint__c/validationRules/Resolution_Vendor_For_Under_Leakage.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Vendor_For_Under_Leakage</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Resolution__c ,&apos;Under Water Leakage&apos;),ISPICKVAL( Resolution_Vendor_Name__c,&apos;&apos; ),false)</errorConditionFormula>
    <errorMessage>Please Enter Resolution Vendor name</errorMessage>
</ValidationRule>