force-app/main/default/objects/Complaint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Complaint_Type_New__c</columns>
    <columns>Stages__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>Enquiry__c</columns>
    <columns>Inactive_Date__c</columns>
    <columns>Complaint_Closed_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>