force-app/main/default/objects/Complaint__c/listViews/Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>Quality_Inspector_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Assigned To Me</label>
</ListView>