force-app/main/default/objects/Complaint__c/listViews/Inactive_Complaints.listView-meta.xml
<ListView>
    <fullName>Inactive_Complaints</fullName>
    <columns>NAME</columns>
    <columns>Complaint_Type_New__c</columns>
    <columns>Stages__c</columns>
    <columns>Urgent__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>Inactive_Date__c</columns>
    <columns>Inactive_Due_To__c</columns>
    <columns>Complaint_Closed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stages__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Complaints</label>
</ListView>